[project]
name = "myfirstrlmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.6.0",
    "deepspeed>=0.16.9",
    "huggingface-hub>=0.32.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "protobuf>=6.31.0",
    "transformers>=4.52.3",
    "trl>=0.17.0",
]
